--- a/data/config.json
+++ b/data/config.json
@@ -15,5 +15,17 @@
   "twelveHourToggle": false,
   "showDayOfWeek": true,
   "showHumidity": false,
-  "language": "en"
+  "language": "en",
+  "dimmingEnabled": false,
+  "dimStartHour": 18,
+  "dimStartMinute": 0,
+  "dimEndHour": 8,
+  "dimEndMinute": 0,
+  "dimBrightness": 2,
+  "showWeatherDescription": false,
+  "countdown": {
+    "enabled": false,
+    "targetTimestamp": 0,
+    "label": ""
+  }
 }
