--- a/ESPTimeCast_ESP8266/data/config.json
+++ b/ESPTimeCast_ESP8266/data/config.json
@@ -15,6 +15,7 @@
   "twelveHourToggle": false,
   "showDayOfWeek": true,
   "showHumidity": false,
+  "colonBlinkEnabled": true,
   "language": "en",
   "dimmingEnabled": false,
   "dimStartHour": 18,
