Added "Show Date" display mode
Added "Show Date" display mode

--- a/ESPTimeCast_ESP32/data/config.json
+++ b/ESPTimeCast_ESP32/data/config.json
@@ -14,6 +14,7 @@
   "ntpServer2": "time.nist.gov",
   "twelveHourToggle": false,
   "showDayOfWeek": true,
+  "showDate": false,
   "showHumidity": false,
   "colonBlinkEnabled": true,
   "language": "en",
