Added scrolling countdown
Added scrolling countdown

--- a/ESPTimeCast_ESP32/data/config.json
+++ b/ESPTimeCast_ESP32/data/config.json
@@ -28,6 +28,7 @@
   "countdown": {
     "enabled": false,
     "targetTimestamp": 0,
-    "label": ""
+    "label": "",
+    "isDramaticCountdown": true
   }
 }
